<resources>
    <string name="app_name">Money manager</string>

    <string name="menu_transaction">Операції</string>
    <string name="menu_graph">Графіки</string>
    <string name="menu_money">Рахунки</string>
    <string name="menu_more">Більше</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_transaction">Add transaction</string>
    <string name="spent_adding">Витрати</string>
    <string name="income_adding">Дохід</string>
    <string name="zero_defaultvalue_adding">0</string>
    <string name="currency">UAH</string>
    <string name="Category">Category</string>
    <string name="today">Сьогодні</string>
    <string name="yesterday">Вчора</string>
    <string name="the_day_before_yesterday">Позавчора</string>
    <string name="Comment">Comment:</string>
    <string name="comment_hint_edittext">Write a comment…</string>
    <string name="save">Save</string>
    <string name="add_photo">Add photo:</string>
    <string name="other">Інше</string>
    <string name="gift">Подарунки</string>
    <string name="help">Допомога</string>
    <string name="salary">Зарплата</string>
    <string name="select_account">Обрати рахунок</string>
    <string name="hint_back_arrow">Back</string>
    <string name="hint_calendar">Обрати дату</string>
    <string name="UAH">"₴ "</string>
    <string name="amount_transaction">₴ %1$s</string>
    <string name="type_transaction_income">💰%1$s</string>
    <string name="type_transaction_spend">💸%1$s</string>
    <string name="food">Їжа</string>
    <string name="clothes">Одяг</string>
    <string name="Technique">Техніка</string>
    <string name="house">Побут</string>
    <string name="detail_transaction">Transaction details</string>
    <string name="amount_transaction_details">сума</string>
    <string name="hint_edit">Edit</string>
    <string name="payment_account">Рахунок</string>
    <string name="transaction_type_details">Тип</string>
    <string name="type_of_wallet">Головний</string>
    <string name="date_of_transaction_details">Дата</string>
    <string name="category_details">Категорія</string>
    <string name="delete_item_details">Видалити</string>
    <string name="delete_details">Видалити</string>
    <string name="comment_details">Comment</string>
    <string name="amount_details">%1$s ₴</string>
    <string name="self_selected_date">Вибране</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="describe_text_comfriming_delete">Are you shure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="switch_state_on">On</string>
    <string name="switch_state_off">Off</string>
    <string name="use_percent_switch">Use percent</string>
    <string name="chart_spend_text">Витрати</string>
    <string name="income_cell">%1$s ₴</string>
    <string name="spend_cell">%1$s ₴</string>
    <string name="balance_cell">\%1$s ₴</string>
    <string name="settings_wipe_data">Wipe data</string>
    <string name="confirm_wipe_all_data">Confirm wipe all data</string>
    <string name="title_wipe_all_data">Are you shure you want to wipe all data?</string>
    <string name="hint_no_data_to_display">No data to display\n \n \n Click \'+\' to add new transaction</string>
    <string name="favourites">Favourites</string>
    <string name="no_favourite_transactions_yet">No favourite transactions yet</string>
    <string name="photo">Фото</string>
    <string name="no_comment">No comment</string>
    <string name="no_photo">No saved photo</string>
    <string name="calendar_month_year">%1$s %2$s</string>
    <string name="date_pattern">yyyy-MM-dd</string>
    <string name="txt_diagrama_topPannel">Діаграма</string>
    <string name="no_transaction_this_month">There are no transactions this month</string>
    <string name="balance">Баланс</string>
</resources>