<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainAddingContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".Adding.AddingFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topPanel"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/top_pannel_adding"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:padding="8dp"

                    android:src="@drawable/baseline_keyboard_backspace_24"
                    android:tooltipText="@string/hint_back_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.466"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txtAddTransaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/add_transaction"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/coin_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/coin_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.725"
                    app:layout_constraintStart_toEndOf="@+id/txtAddTransaction"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription,ImageContrastCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/amount_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#592811"
                android:ems="6"
                android:inputType="number|numberDecimal|numberSigned"
                android:minHeight="48dp"
                android:hint="0"
                android:textColorHint="#592811"


                android:textAlignment="center"
                android:textColor="#592811"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.41"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topPanel"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/currency_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"

                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:text="@string/currency"
                android:textColor="#47280C"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/amount_editText"
                app:layout_constraintStart_toEndOf="@+id/amount_editText"
                app:layout_constraintTop_toBottomOf="@id/topPanel" />

            <TextView
                android:id="@+id/selectAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/select_account"
                android:textColor="@color/small_text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_editText" />

            <TextView
                android:id="@+id/typeOfWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/type_of_wallet"
                android:textColor="#157C47"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectAccount" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeOfWallet"
                app:layout_constraintVertical_bias="0.0">


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tabIndicatorColor="@color/selected_tab_item"
                    app:tabInlineLabel="true"
                    app:tabSelectedTextColor="@color/selected_tab_item"
                    app:tabTextColor="@color/tab_text_color"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainAddingContainer"
            app:layout_constraintVertical_bias="0.0">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/today_container"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:background="@drawable/active_datepicker_background"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:orientation="vertical"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <TextView
                        android:id="@+id/date_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="03.03" />

                    <TextView
                        android:id="@+id/textView_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/today"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/yesterday_container"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:foreground="?android:selectableItemBackgroundBorderless"

                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_yesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="02.03" />

                    <TextView
                        android:id="@+id/textView_yesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday"

                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/twoDaysAgo_container"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:foreground="?android:selectableItemBackgroundBorderless"

                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/today_container"
                    app:layout_constraintStart_toEndOf="@+id/yesterday_container">

                    <TextView
                        android:id="@+id/date_2daysago"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="01.03" />

                    <TextView
                        android:id="@+id/textView_2daysAgo"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:text="@string/the_day_before_yesterday"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/calendar_picker_image"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_marginBottom="10dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="8dp"

                android:src="@drawable/calendar_icon"
                android:tooltipText="@string/hint_calendar"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat5"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription,UnusedAttribute" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alegreya_sans_sc_medium"
                android:text="@string/Comment"
                android:textColor="@color/black"
                android:textSize="19sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat5" />

            <EditText
                android:id="@+id/comment_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/comment_hint_edittext"
                android:inputType="text"
                android:minHeight="48dp"

                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="Autofill" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayoutCompat9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_et">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"

                    android:layout_marginTop="4dp"
                    android:text="@string/add_photo"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/add_photo_imageView"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="18dp"
                    android:background="@drawable/add_photo_background"
                    android:padding="15dp"

                    android:src="@drawable/baseline_add_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:ignore="ContentDescription,ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:enabled="false"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:text="@string/save"
                android:layout_marginBottom="30dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

